<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!--  Artemis instance names  -->
    <string name="artemis_instance_tum_production">Technical University of Munich</string>
    <string name="artemis_instance_tum_test_server_1">TUM test-server 1</string>
    <string name="artemis_instance_tum_test_server_2">TUM test-server 2</string>
    <string name="artemis_instance_custom">Other</string>

    <!--  Account ui  -->
    <string name="account_screen_title">Welcome to Artemis!</string>
    <string name="account_screen_subtitle">Interactive Learning with Individual Feedback</string>

    <string name="account_load_server_profile_failure">Something went wrong while loading the data from the server.</string>
    <string name="account_load_server_profile_suspended">Could not load data. Please check your internet connection.</string>
    <string name="account_load_server_profile_loading">Fetching data from server…</string>
    <string name="account_load_server_profile_button_try_again">Try again</string>

    <string name="account_login_register_selection_login_text">Do you already have an account?</string>
    <string name="account_login_register_selection_login_button">Login</string>
    <string name="account_login_register_selection_register_text">Or sign up now.</string>
    <string name="account_login_register_selection_register_button">Create account</string>


    <!--  Artemis instance selection ui  -->
    <string name="account_select_artemis_instance_select_text">Please select your artemis server:</string>
    <!--  Login/Register selection ui  -->
    <string name="account_login_button">Login</string>
    <string name="account_register_button">Register</string>

    <!--  Registration ui  -->
    <string name="register_label_first_name">First name</string>
    <string name="register_label_last_name">Last name</string>
    <string name="register_label_username">Login name</string>
    <string name="register_label_email">Email</string>
    <string name="register_label_password">Password</string>
    <string name="register_label_confirm_password">Confirm password</string>

    <string name="register_email_pattern">Please use an email with the following pattern: %1$s</string>

    <string name="register_error_text_first_name_not_present">Your first name is required.</string>
    <string name="register_error_text_first_name_short">At least 2 characters are required.</string>
    <string name="register_error_text_last_name_not_present">Your last name is required.</string>
    <string name="register_error_text_last_name_short">At least 2 characters are required.</string>

    <string name="register_error_text_username_not_present">Your username is required.</string>
    <string name="register_error_text_username_short">Your username is required to be at least %d characters.</string>
    <string name="register_error_text_username_long">Your username cannot be longer than %d characters.</string>
    <string name="register_error_text_username_invalid_pattern">Your username can only contain letters and digits.</string>

    <string name="register_error_text_email_not_present">Your email is required.</string>
    <string name="register_error_text_email_short">Your email is required to be at least %d characters.</string>
    <string name="register_error_text_email_long">Your email cannot be longer than %d characters.</string>
    <string name="register_error_text_email_invalid_pattern">Your email does not follow the required pattern.</string>

    <string name="register_error_text_password_not_present">Your password is required.</string>
    <string name="register_error_text_password_short">Your password is required to be at least %d characters.</string>
    <string name="register_error_text_password_long">Your password cannot be longer than %d characters.</string>

    <string name="register_error_text_confirmation_password_not_present">Your confirmation password is required.</string>
    <string name="register_error_text_confirmation_password_short">Your confirmation password is required to be at least %d characters.</string>
    <string name="register_error_text_confirmation_password_long">Your confirmation password cannot be longer than %d characters.</string>

    <!-- Login ui -->
    <string name="login_dialog_login_failed_title">Login failed.</string>
    <string name="login_dialog_login_failed_message">Something went wrong while logging you in. Please try again.</string>
    <string name="login_dialog_login_failed_confirm">@android:string/ok</string>

    <string name="login_password_or_saml_divider_text">or</string>

    <string name="login_please_sign_in_account">Please sign in with your %1$s account.</string>
    <string name="login_username_label">Login</string>
    <string name="login_password_label">Password</string>
    <string name="login_remember_me_label">Automatic login</string>
    <string name="login_perform_login_button_text">Login</string>

    <string name="login_saml_please_sign_in_provider">Please sign in with %1$s</string>
    <string name="login_saml_please_sign_in">Please sign in using Single Sign-on.</string>
    <string name="login_saml_button_label">SAML2 Login</string>

    <string name="login_error_accept_terms">Please accept terms.</string>
</resources>