<?xml version="1.0" encoding="utf-8"?>
<!-- Strings associated with an exercise -->
<resources>

    <string name="exercise_item_due_date_not_set">No due date</string>

    <!--  Difficulty  -->
    <string name="exercise_difficulty_easy">Easy</string>
    <string name="exercise_difficulty_medium">Medium</string>
    <string name="exercise_difficulty_hard">Hard</string>

    <string name="exercise_is_optional">Optional</string>
    <string name="exercise_is_bonus">Bonus</string>
    <string name="exercise_live_quiz">Live</string>

    <string name="exercise_user_not_started_exercise">You have not started this exercise yet.</string>
    <string name="exercise_user_not_assigned_to_team">You have not been assigned to a team yet.</string>
    <string name="exercise_exercise_not_submitted">No Submission</string>
    <string name="exercise_exercise_missed_deadline">You have missed the deadline.</string>
    <string name="exercise_quiz_not_started">Not yet started.</string>
    <string name="exercise_user_not_started_quiz">Not yet started.</string>
    <string name="exercise_user_not_participated">Not participated.</string>
    <string name="exercise_user_participating">Currently participating.</string>
    <string name="exercise_user_submitted">You have already submitted.</string>
    <string name="exercise_not_yet_started">Not yet started</string>
    <string name="exercise_user_not_assigned_to_team_short">No team yet</string>
    <string name="exercise_exercise_missed_deadline_short">Missed due date</string>
    <string name="exercise_user_not_participated_short">Not participated</string>
    <string name="exercise_user_participating_short">Currently participating</string>
    <string name="exercise_user_submitted_short">Already submitted</string>
    <string name="exercise_status_dash">–</string>
    <!--  Display nothing like the webapp does.  -->
    <string name="exercise_user_unknown"> </string>

    <string name="exercise_result_is_building">Building…</string>
    <string name="exercise_result_no_result">You have no results yet.</string>
    <string name="exercise_result_no_graded_result">You have no graded result.</string>
    <string name="exercise_result_submitted">Submitted, you can still submit updates.</string>
    <string name="exercise_result_submitted_waiting_for_grading">Submitted, waiting for grading.</string>
    <string name="exercise_result_late_submission">Late submission, waiting for feedback.</string>
    <string name="exercise_result_missing">Missing result. Please try again later.</string>

    <string name="exercise_result_has_result_score">%s, %s points</string>
    <string name="exercise_result_has_result_score_without_points">%s</string>
    <string name="exercise_result_has_result_score_with_date">%1$s (%2$s)</string>
    <string name="exercise_result_has_result_score_late_with_date">Late: %1$s (%2$s)</string>
    <string name="exercise_result_build_failed">Build failed</string>
    <string name="exercise_result_build_successful_no_tests">Build successful, no tests executed</string>
    <string name="exercise_result_build_successful_tests">%1$s of %2$s passed</string>
    <string name="exercise_result_code_issues">%s, %s, %s issues, %s points</string>
    <string name="exercise_result_no_code_issues">%s, %s, %s points</string>
    <string name="exercise_result_code_issues_without_points">%s, %s, %s issues</string>
    <string name="exercise_result_no_code_issues_without_points">%s, %s</string>
    <string name="exercise_result_is_preliminary">preliminary</string>
    <string name="exercise_result_programming_short_with_build_information">%s, %s</string>

    <!--  When a result exists but the score field is not set.  -->
    <string name="exercise_result_has_result_score_unknown">Unknown</string>

    <!--  Exercise action buttons  -->
    <string name="exercise_actions_view_result_button">View result</string>
    <string name="exercise_participation_not_possible">Participating in this exercise is currently
        not possible in the mobile app</string>
    <string name="exercise_actions_start_exercise_button">Start exercise</string>
    <string name="exercise_actions_open_exercise_button">Open exercise</string>
    <string name="exercise_actions_view_submission_button">View submission</string>
    <string name="exercise_actions_start_quiz_button">Start quiz</string>
    <string name="exercise_actions_practice_quiz_button">Practice</string>
    <string name="exercise_actions_open_quiz_button">Open quiz</string>
</resources>