...
import de.tum.informatics.www1.artemis.native_app.feature.metis.ui.reply.MetisReplyHandler
import de.tum.informatics.www1.artemis.native_app.feature.metis.ui.reply.ReplyTextField
import de.tum.informatics.www1.artemis.native_app.feature.metis.visible_metis_context_reporter.ReportVisibleMetisContext
import de.tum.informatics.www1.artemis.native_app.feature.metis.visible_metis_context_reporter.VisibleStandalonePostDetails
import kotlinx.coroutines.CompletableDeferred

internal const val TEST_TAG_THREAD_LIST = "TEST_TAG_THREAD_LIST"
internal fun testTagForAnswerPost(answerPostId: Long) = "answerPost$answerPostId"

/**
 * Displays a single post with its replies.
 */
@Composable
...
